--- a/demos/data-exfil-postgres/postgres-sakila.yaml
+++ b/demos/data-exfil-postgres/postgres-sakila.yaml
@@ -1,27 +1,27 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: postgres
+  name: postgres-sakila
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres-deployment
+  name: postgres-sakila-deployment
   labels:
-    app: postgres
-    namespace: postgres
+    app: postgres-sakila
+  namespace: postgres-sakila
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgres
+      app: postgres-sakila
   template:
     metadata:
       labels:
-        app: postgres
+        app: postgres-sakila
     spec:
       containers:
-      - name: postgres
+      - name: postgres-sakila
         image: jasonumiker/postgres-sakila:latest
         ports:
         - containerPort: 5432
