--- a/setup-cluster/multipass-terraform/argovalues.yaml
+++ b/setup-cluster/multipass-terraform/argovalues.yaml
@@ -4,3 +4,8 @@
   configs:
     secret:
       argocdServerAdminPassword: $2a$10$rRyBsGSHK6.uc8fntPwVIuLVHgsAhAX7TcdrqW/RADU0uh7CaChLa
+    params:
+      "server.insecure": true
+    repositories:
+      sysdig-demos:
+        url: https://github.com/jasonumiker-sysdig/sysdig-demos
