--- a/demos/network-policy/hello-app-team1/hello-server.yaml
+++ b/demos/network-policy/hello-app-team1/hello-server.yaml
@@ -83,7 +83,7 @@ spec:
       # Define container properties
       containers:
       #- image: gcr.io/google-samples/hello-app:latest
-      - image: jasonumiker/hello-app:latest
+      - image: jasonumiker/hello-app:190523
         name: hello-server
 
         # Describes the ports exposed on the service
