--- a/demos/security-playground/kustomization.yaml
+++ b/demos/security-playground/kustomization.yaml
@@ -1,4 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - security-playground.yaml
+- security-playground.yaml
+patches:
+- path: ./patches/1685433213_remediate_SecurityContext_runAsUser_for_workload_security-playground.yaml
+  target:
+    kind: Deployment
+    name: security-playground
+    namespace: security-playground
