--- a/demos/security-playground-unprivileged/Dockerfile
+++ b/demos/security-playground-unprivileged/Dockerfile
@@ -1,6 +1,10 @@
 FROM python:3.11.4-bullseye
 
-RUN adduser -D python
+ARG UID=1000
+ARG GID=1000
+
+RUN groupadd -g "${GID}" python \
+  && useradd --create-home --no-log-init -u "${UID}" -g "${GID}" python
 USER python
 WORKDIR /home/python
 
@@ -9,7 +13,8 @@ RUN pip install --user pipenv
 ENV PATH="/home/python/.local/bin:${PATH}"
 
 COPY --chown=python:python Pipfile Pipfile
-RUN pipenv lock -r > requirements.txt
+RUN pipenv lock
+RUN pipenv requirements > requirements.txt
 RUN pip install --user -r requirements.txt
 
 COPY app.py /app
