--- a/demos/security-playground-unprivileged/security-playground-unprivileged.yaml
+++ b/demos/security-playground-unprivileged/security-playground-unprivileged.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: security-playground-unprivileged
-          image: jasonumiker/security-playground-unprivileged:110623
+          image: public.ecr.aws/m9h2b5e7/security-playground-unprivileged:110623
           ports:
             - name: http
               containerPort: 8080
