--- a/demos/security-playground/security-playground.yaml
+++ b/demos/security-playground/security-playground.yaml
@@ -23,7 +23,7 @@ spec:
       hostPID: true
       containers:
         - name: security-playground
-          image: jasonumiker/security-playground:190523
+          image: public.ecr.aws/m9h2b5e7/security-playground:110623
           ports:
             - name: http
               containerPort: 8080
