--- a/demos/security-playground/security-playground-restricted.yaml
+++ b/demos/security-playground/security-playground-restricted.yaml
@@ -34,7 +34,7 @@ spec:
           type: RuntimeDefault        
       containers:
         - name: security-playground-unprivileged
-          image: public.ecr.aws/m9h2b5e7/security-playground-unprivileged:110623
+          image: public.ecr.aws/m9h2b5e7/security-playground-unprivileged:270723
           ports:
             - name: http
               containerPort: 8080
@@ -51,6 +51,13 @@ spec:
             allowPrivilegeEscalation: false
             capabilities:
               drop: ["ALL"]
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
