--- a/demos/security-playground/security-playground.yaml
+++ b/demos/security-playground/security-playground.yaml
@@ -49,7 +49,7 @@ spec:
       hostPID: true
       containers:
         - name: security-playground
-          image: public.ecr.aws/m9h2b5e7/security-playground:110623
+          image: public.ecr.aws/m9h2b5e7/security-playground:270723
           ports:
             - name: http
               containerPort: 8080
@@ -64,6 +64,13 @@ spec:
               port: http
           securityContext:
             privileged: true
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
