Added requests and limits to demos

--- a/demos/security-playground/postgres-sakila.yaml
+++ b/demos/security-playground/postgres-sakila.yaml
@@ -30,3 +30,10 @@ spec:
         env:
         - name: POSTGRES_PASSWORD
           value: "sakila"
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
