--- a/demos/network-policy/hello-app-team1/hello-client.yaml
+++ b/demos/network-policy/hello-app-team1/hello-client.yaml
@@ -11,7 +11,7 @@ kind: Deployment
 metadata:
   labels:
     app: hello
-  name: hello-client-allowed
+  name: hello-client
 spec:
   replicas: 1
   selector:
@@ -25,7 +25,7 @@ spec:
       automountServiceAccountToken: false
       containers:
       - image: alpine:3.18.2
-        name: hello-client-allowed
+        name: hello-client
         command: ["sh", "-c"]
         args: ["while true; do wget -qO- --timeout=2 http://hello-server.team1.svc:8080; sleep 30; done"]
         securityContext:
