--- a/setup-cluster/promscrape-values.yaml
+++ b/setup-cluster/promscrape-values.yaml
@@ -45,6 +45,182 @@ agent:
         sample_limit: 40000
         tls_config:
           insecure_skip_verify: true
+      - job_name: k8s-cadvisor-default
+        scrape_interval: 60s
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          insecure_skip_verify: true
+        metrics_path: '/metrics/cadvisor'
+        kubernetes_sd_configs:
+        - role: node
+        relabel_configs:
+        - action: keep
+          source_labels: [__meta_kubernetes_node_address_InternalIP]
+          regex: __HOSTIPS__
+        - action: labelmap
+          regex: __meta_kubernetes_node_label_(.+)
+          replacement: kube_node_label_$1
+        - replacement: localhost:10250
+          target_label: __address__
+        - action: replace
+          source_labels: [__meta_kubernetes_node_name]
+          target_label: kube_node_name
+        - action: replace
+          source_labels: [__meta_kubernetes_namespace]
+          target_label: kube_namespace_name
+        metric_relabel_configs:
+        - source_labels: [__name__]
+          regex: "container_cpu_cfs_throttled_periods_total|container_cpu_cfs_periods_total|container_cpu_cfs_throttled_seconds_total|container_cpu_usage_seconds_total|container_spec_cpu_period"
+          action: keep
+      - job_name: kube-dns-default
+        honor_labels: true
+        kubernetes_sd_configs:
+        - role: pod
+        relabel_configs:
+        - action: keep
+          source_labels: [__meta_kubernetes_pod_host_ip]
+          regex: __HOSTIPS__
+        - source_labels: [__meta_kubernetes_pod_phase]
+          action: keep
+          regex: Running
+        - action: keep
+          source_labels:
+          - __meta_kubernetes_namespace
+          - __meta_kubernetes_pod_name
+          separator: '/'
+          regex: 'kube-system/coredns.+'
+        - source_labels:
+          - __address__
+          action: keep
+          regex: (.*:9153)
+        - source_labels:
+          - __meta_kubernetes_pod_name
+          action: replace
+          target_label: instance
+        - action: labelmap
+          regex: __meta_kubernetes_pod_label_(.+)
+        - action: replace
+          source_labels: [__meta_kubernetes_pod_uid]
+          target_label: sysdig_k8s_pod_uid
+        - action: replace
+          source_labels: [__meta_kubernetes_pod_container_name]
+          target_label: sysdig_k8s_pod_container_name
+      - job_name: k8s-kubelet-default
+        scrape_interval: 60s
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          insecure_skip_verify: true
+        kubernetes_sd_configs:
+        - role: node
+        relabel_configs:
+        - action: keep
+          source_labels: [__meta_kubernetes_node_address_InternalIP]
+          regex: __HOSTIPS__
+        - action: labelmap
+          regex: __meta_kubernetes_node_label_(.+)
+          replacement: kube_node_label_$1
+        - replacement: localhost:10250
+          target_label: __address__
+        - action: replace
+          source_labels: [__meta_kubernetes_node_name]
+          target_label: kube_node_name
+        - action: replace
+          source_labels: [__meta_kubernetes_namespace]
+          target_label: kube_namespace_name
+        metric_relabel_configs:
+        # - source_labels: [__name__]
+        #   regex: "kubelet_volume(.+)|storage(.+)"
+        #   action: drop
+        - source_labels: [__name__]
+          regex: (go_goroutines|go_info|kube_node_status_capacity_pods|kube_node_status_condition|kubelet_cgroup_manager_duration_seconds_bucket|kubelet_cgroup_manager_duration_seconds_count|kubelet_node_config_error|kubelet_pleg_relist_duration_seconds_bucket|kubelet_pleg_relist_interval_seconds_bucket|kubelet_pod_start_duration_seconds_bucket|kubelet_pod_start_duration_seconds_count|kubelet_pod_worker_duration_seconds_bucket|kubelet_pod_worker_duration_seconds_count|kubelet_running_containers|kubelet_running_pods|kubelet_runtime_operations_duration_seconds_bucket|kubelet_runtime_operations_errors_total|kubelet_runtime_operations_total|kubernetes_build_info|process_cpu_seconds_total|process_resident_memory_bytes|rest_client_request_duration_seconds_bucket|rest_client_requests_total|volume_manager_total_volumes)
+          action: keep
+      - job_name: 'calico-node-default'
+        kubernetes_sd_configs:
+        - role: pod
+        relabel_configs:
+        - action: keep
+          source_labels: [__meta_kubernetes_pod_host_ip]
+          regex: __HOSTIPS__
+        - action: drop
+          source_labels: [__meta_kubernetes_pod_annotation_promcat_sysdig_com_omit]
+          regex: true
+        - source_labels: [__meta_kubernetes_pod_phase]
+          action: keep
+          regex: Running
+        - action: replace
+          source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scheme]
+          target_label: __scheme__
+          regex: (https?)
+        - action: replace
+          source_labels:
+          - __meta_kubernetes_pod_container_name
+          - __meta_kubernetes_pod_annotation_promcat_sysdig_com_integration_type
+          regex: (calico-node);(.{0}$)
+          replacement: calico
+          target_label: __meta_kubernetes_pod_annotation_promcat_sysdig_com_integration_type
+        - action: keep
+          source_labels:
+          - __meta_kubernetes_pod_annotation_promcat_sysdig_com_integration_type
+          regex: "calico"
+        - action: replace
+          source_labels: [__address__]
+          regex: ([^:]+)(?::\d+)?
+          replacement: $1:9091
+          target_label: __address__
+        - action: replace
+          source_labels: [__meta_kubernetes_pod_uid]
+          target_label: sysdig_k8s_pod_uid
+        - action: replace
+          source_labels: [__meta_kubernetes_pod_container_name]
+          target_label: sysdig_k8s_pod_container_name
+        metric_relabel_configs:
+        - source_labels: [__name__]
+          regex: (felix_calc_graph_update_time_seconds|felix_cluster_num_hosts|felix_cluster_num_policies|felix_cluster_num_profiles|felix_exec_time_micros|felix_int_dataplane_addr_msg_batch_size|felix_int_dataplane_apply_time_seconds|felix_int_dataplane_failures|felix_int_dataplane_iface_msg_batch_size|felix_int_dataplane_msg_batch_size|felix_ipset_calls|felix_ipset_errors|felix_ipset_lines_executed|felix_iptables_lines_executed|felix_iptables_lock_acquire_secs|felix_iptables_restore_calls|felix_iptables_restore_errors|felix_iptables_save_calls|felix_iptables_save_errors|felix_log_errors|felix_route_table_list_seconds|felix_route_table_per_iface_sync_seconds)
+          action: keep
+      - job_name: 'calico-controller-default'
+        kubernetes_sd_configs:
+        - role: pod
+        relabel_configs:
+        - action: keep
+          source_labels: [__meta_kubernetes_pod_host_ip]
+          regex: __HOSTIPS__
+        - action: drop
+          source_labels: [__meta_kubernetes_pod_annotation_promcat_sysdig_com_omit]
+          regex: true
+        - source_labels: [__meta_kubernetes_pod_phase]
+          action: keep
+          regex: Running
+        - action: replace
+          source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scheme]
+          target_label: __scheme__
+          regex: (https?)
+        - action: replace
+          separator: ;
+          source_labels:
+          - __meta_kubernetes_pod_container_name
+          - __meta_kubernetes_pod_annotation_promcat_sysdig_com_integration_type
+          regex: (calico-kube-controllers);(.{0}$)
+          replacement: calico-controller
+          target_label: __meta_kubernetes_pod_annotation_promcat_sysdig_com_integration_type
+        - action: keep
+          source_labels:
+          - __meta_kubernetes_pod_annotation_promcat_sysdig_com_integration_type
+          regex: "calico-controller"
+        - action: replace
+          source_labels: [__address__]
+          regex: ([^:]+)(?::\d+)?
+          replacement: $1:9094
+          target_label: __address__
+        - action: replace
+          source_labels: [__meta_kubernetes_pod_uid]
+          target_label: sysdig_k8s_pod_uid
+        - action: replace
+          source_labels: [__meta_kubernetes_pod_container_name]
+          target_label: sysdig_k8s_pod_container_name
   sysdig:
     settings:
       prometheus:
