--- a/demos/security-playground/kustomization.yaml
+++ b/demos/security-playground/kustomization.yaml
@@ -1,7 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - security-playground.yaml
-  - security-playground-restricted.yaml
-  - security-playground-nodrift.yaml
-  - postgres-sakila.yaml
+- security-playground.yaml
+- security-playground-restricted.yaml
+- security-playground-nodrift.yaml
+- postgres-sakila.yaml
+patches:
+- path: ./patches/1695085595_remediate_SecurityContext_allowPrivilegeEscalation_for_workload_security-playground.yaml
+  target:
+    kind: Deployment
+    name: security-playground
+    namespace: security-playground
