--- a/demos/security-playground/security-playground-lb.yaml
+++ b/demos/security-playground/security-playground-lb.yaml
@@ -4,6 +4,7 @@ metadata:
   name: security-playground
   labels:
     name: security-playground
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -48,29 +49,30 @@ spec:
     spec:
       hostPID: true
       containers:
-        - name: security-playground
-          image: public.ecr.aws/m9h2b5e7/security-playground:070124
-          ports:
-            - name: http
-              containerPort: 8080
-              protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: http
-          securityContext:
-            privileged: true
-          resources:
-            requests:
-              memory: "256Mi"
-              cpu: "100m"
-            limits:
-              memory: "512Mi"
-              cpu: "250m"
+      - name: security-playground
+        image: public.ecr.aws/m9h2b5e7/security-playground:070124
+        ports:
+        - name: http
+          containerPort: 8080
+          protocol: TCP
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: http
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: http
+        securityContext:
+          privileged: true
+          allowPrivilegeEscalation: false
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "100m"
+          limits:
+            memory: "512Mi"
+            cpu: "250m"
 ---
 apiVersion: v1
 kind: Service
