--- a/demos/security-playground/kustomization.yaml
+++ b/demos/security-playground/kustomization.yaml
@@ -1,8 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - security-playground.yaml
-  - security-playground-restricted.yaml
-  - security-playground-restricted-nodrift.yaml
-  - security-playground-restricted-nomalware.yaml
-  - postgres-sakila.yaml
+- security-playground.yaml
+- security-playground-restricted.yaml
+- security-playground-restricted-nodrift.yaml
+- security-playground-restricted-nomalware.yaml
+- postgres-sakila.yaml
+patches:
+- path: ./patches/1706761099_remediate_SecurityContext_runAsUser_for_workload_security-playground-restricted-nomalware.yaml
+  target:
+    kind: Deployment
+    namespace: security-playground-restricted-nomalware
