--- a/setup-cluster/.gitignore
+++ b/setup-cluster/.gitignore
@@ -3,3 +3,5 @@ sysdig-agent-values.yaml.onprem
 sysdig-agent-values.yaml.saas
 sysdig-agent-values.yaml.clusterscanner
 kubeconfig
+force-cspm.sh
+force-kspm.sh
